@@ -35,6 +35,13 @@ from bzrlib.plugins.builddeb.util import (
     )
 
 
+def iter_child_entries(tree, file_id):
+    try:
+        return tree.root_inventory.root.children.values()
+    except AttributeError:
+        return tree.inventory.root.children.values()
+
+
 class Fixture(object):
     """A test fixture."""
 
@@ -121,7 +128,7 @@ class FileMovedReplacedUpstream(Fixture):
         tree.lock_write()
         try:
             newpath = test_case.getUniqueString()
-            for child in tree.inventory.root.children.values():
+            for child in iter_child_entries(tree, tree.get_root_id()):
                 if child.kind == 'file':
                     oldpath = child.name
             tree.rename_one(oldpath, newpath)
