@@ -3,8 +3,9 @@ bzr-builddeb (2.8.3) UNRELEASED; urgency=low
   * Fix patch unapplying from DirStateRevisionTrees. LP: #923688
   * Bump distro-info dependency back to a recommends, to ease
     backporting.
+  * Cope with the deprecation of Tree.inventory in bzr/2.6.
 
- -- Jelmer Vernooij <jelmer@debian.org>  Wed, 01 Feb 2012 13:20:49 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Fri, 17 Feb 2012 15:38:41 +0100
 
 bzr-builddeb (2.8.2) unstable; urgency=low
 
